objects/Key_Action_Decision__c.object
<CustomObject>
    <description>TOOLKIT - An object to track action items and key decisions related to the project.</description>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Completion date of Key Action/Decision</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Decision_was_made__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Decision was made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>Number of days Key Action/Decision remained open</description>
        <formula>IF(NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)), NOW() - CreatedDate,  Completed_Date__c - (DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Outcome__c</fullName>
        <description>Description of outcome of Key Action/Decision</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter details of the outcome of the action item (what was determined) or the decision reached (what was agreed to, which option was selected). This field is required when Status is Completed.</inlineHelpText>
        <label>Decision/Outcome</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Key Action/Decision</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a detailed desription of the Action to be completed or the Decision needed.</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_on_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Days exceeded</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date when the Action Item must be completed or the Decision must be made. Items not completed by the Due Date pose a risk to deliverables.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Action_Decision__c</fullName>
        <description>Key Action/Decision number</description>
        <displayFormat>KAD-{00000}</displayFormat>
        <label>Key Action/Decision #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <description>Details of options which are under evaluation</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the options under evaluation.</inlineHelpText>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Days to close entered in Help Text are a suggestion, and can be changed by individual projects to meet their specific needs.</description>
        <inlineHelpText>Normal Priority items should be closed within 5 business days. High Priority items should be closed within 2 business days.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                    <color>#F3D904</color>
                    <label>High</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capability related to current Key Action/Decision</description>
        <inlineHelpText>Indicate which Capability this Key Action/Key is related to, if any.</inlineHelpText>
        <label>Related Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Issue_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Issue/risk related to current Key Action/Decision</description>
        <inlineHelpText>If this Key Action/Decision is directly related to a single Issue or Risk, select that Issue or Risk here.</inlineHelpText>
        <label>Related Issue/Risk</label>
        <referenceTo>Issues_Risks__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Key_Action_Decision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Action/Decision related to current Key Action/Decision</description>
        <inlineHelpText>If this Key Action/Decision was created as a result of another Action Item or Decision, select the related item here.</inlineHelpText>
        <label>Related Key Action/Decision</label>
        <referenceTo>Key_Action_Decision__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Question_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Question Log</label>
        <referenceTo>Question_Log__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release related to current  Key Action/Decision</description>
        <inlineHelpText>Select the Release that this Key Action/Decision is related to.</inlineHelpText>
        <label>Related Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Request related to current  Key Action/Decision</description>
        <inlineHelpText>If this Key Action/Decision is directly related to a single Request, select that Request here.</inlineHelpText>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOURCE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SOURCE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of  Key Action/Decision</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#A53711</color>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#F3D904</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#419249</color>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Key Action/Decision</label>
    <listViews>
        <fullName>All_Action_Items1</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>AssignedTo__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Related_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <label>All Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>AssignedTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>Related_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <label>All Decisions</label>
    </listViews>
    <listViews>
        <fullName>All_Overdue_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Overdue_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Decision</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Action Items</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Decisions</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Action/Decision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Actions/Decisions</pluralLabel>
    <recordTypes>
        <fullName>Action_Item</fullName>
        <active>true</active>
        <description>Used to document Action Items that need to be completed by resources on the Program/Project.</description>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Decision</fullName>
        <active>true</active>
        <description>Used to track Key Decisions that impact the Program/Project.</description>
        <label>Key Decision</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Decision_Outcome_Required_when_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c, &quot;Completed&quot;) &amp;&amp; ISNULL( Decision_Outcome__c )</errorConditionFormula>
        <errorDisplayField>Decision_Outcome__c</errorDisplayField>
        <errorMessage>Decision/Outcome is required when Status is Completed.</errorMessage>
    </validationRules>
</CustomObject>